# arabic_pdf_to_text

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  USAGE.md  demo_verbose.sh
.github/workflows/: ci.yml  release.yml
src/: chunker.rs  gemini_client.rs  lib.rs  main.rs  pdf_reader.rs  ui.rs
