[package]
name = "arabic_pdf_to_text"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
colored = "2"
console = "0.15"
humansize = "2"
chrono = "0.4"
unicode-width = "0.1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
